--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,15 @@ on: [push,pull_request]
 
 jobs:
   rspec:
+    continue-on-error: ${{ endsWith(matrix.ruby, 'head') }}
     strategy:
       matrix:
-        ruby: [2.4, 2.5, 2.6, 2.7, 3.0, 3.1, 3.2, 3.3]
+        ruby: [2.6, 2.7, 3.0, 3.1, 3.2, 3.3, head]
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: recursive
 
