--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') }}
     strategy:
       matrix:
-        ruby: [2.6, 2.7, 3.0, 3.1, 3.2, 3.3, head]
+        ruby: [3.0, 3.1, 3.2, 3.3, head]
 
     runs-on: ubuntu-latest
 
